--- a/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn.csproj
+++ b/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn.csproj
@@ -51,6 +51,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="SearchOn.cs" />
     <Compile Include="SearchOnPackage.cs" />
     <Compile Include="SearchOnPackageGuids.cs" />
