--- a/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn.csproj
+++ b/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn.csproj
@@ -52,10 +52,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Search.cs" />
-    <Compile Include="SearchOn.cs" />
     <Compile Include="SearchOnPackage.cs" />
     <Compile Include="SearchOnPackageGuids.cs" />
+    <Compile Include="Services\Search\SearchEngineManager.cs" />
+    <Compile Include="Services\Options\OptionPageGrid.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Services\Options\OptionUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Services\Options\OptionUserControl.Designer.cs">
+      <DependentUpon>OptionUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Services\Search\SearchEngineTypes.cs" />
+    <Compile Include="Services\Search\GoogleSearch.cs" />
+    <Compile Include="Services\Search\SearchOn.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
@@ -172,6 +183,8 @@
       <HintPath>..\packages\Microsoft.VisualStudio.Validation.14.0.50417-pre\lib\net45\Microsoft.VisualStudio.Validation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
@@ -181,8 +194,12 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Services\Options\OptionUserControl.resx">
+      <DependentUpon>OptionUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
