--- a/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn.csproj
+++ b/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn.csproj
@@ -86,7 +86,14 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Resources\SearchOn.png" />
-    <Content Include="Resources\SearchOnPackage.ico" />
+    <Content Include="Resources\SearchOnPackage.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Resources\SearchOnPreview.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <VSCTCompile Include="SearchOnPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
@@ -204,6 +211,7 @@
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
