--- a/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/packages.config
+++ b/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/packages.config
@@ -3,7 +3,6 @@
   <package id="Microsoft.VisualStudio.Imaging" version="14.0.22823-RC" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070-pre" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.0.50420-pre" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.0.22823-RC" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319-pre" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727-pre" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="12.0.21003-pre" targetFramework="net452" userInstalled="true" />
@@ -19,4 +18,22 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.0.50417-pre" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.0.22823-RC" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50417-pre" targetFramework="net452" userInstalled="true" />
+  <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.IDE.11" version="11.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.IDE.8" version="8.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.IDE.9" version="9.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.OLE.Interop" version="7.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.11" version="11.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Immutable.10" version="10.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Immutable.11" version="11.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Interop" version="7.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Interop.10" version="10.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Interop.11" version="11.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Interop.8" version="8.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net45" userInstalled="true" />
 </packages>
